[1.35] update links to differences.html - faq/ports/index.html

--- a/faq/ports/index.html
+++ b/faq/ports/index.html
@@ -75,23 +75,23 @@
   <li><a href="testing.html#More"        >И снова тестирование</a>
 </ul>
 
-<h3><a href="https://openbsd.org/faq/ports/differences.html">Различия с другими BSD проектами</a></h3>
+<h3><a href="differences.html">Различия с другими BSD проектами</a></h3>
 <ul>
-  <li><a href="https://openbsd.org/faq/ports/differences.html#Differences" >Важные различия с другими BSD проектами</a>
-  <li><a href="https://openbsd.org/faq/ports/differences.html#Extra"       >Дополнительная поддержка</a>
-  <li><a href="https://openbsd.org/faq/ports/differences.html#Generic"     >Generic Infrastructure Issues</a>
-  <li><a href="https://openbsd.org/faq/ports/differences.html#Make"        >Правильное использование make</a>
-  <li><a href="https://openbsd.org/faq/ports/differences.html#Fetch"       >Распаковка (извлечение исходников)</a>
-  <li><a href="https://openbsd.org/faq/ports/differences.html#wrkdir"      >Инфраструктура <code>WRKDIR</code></a>
-  <li><a href="https://openbsd.org/faq/ports/differences.html#Fake"        >Fake Port Installation</a>
+  <li><a href="differences.html#Differences" >Важные различия с другими BSD проектами</a>
+  <li><a href="differences.html#Extra"       >Дополнительная помощь</a>
+  <li><a href="differences.html#Generic"     >Общие вопросы по поводу инфраструктуры</a>
+  <li><a href="differences.html#Make"        >Правильное использование make</a>
+  <li><a href="differences.html#Fetch"       >Распаковка (извлечение исходников)</a>
+  <li><a href="differences.html#wrkdir"      >Инфраструктура <code>WRKDIR</code></a>
+  <li><a href="differences.html#Fake"        >Fake Port Installation</a>
   <ul>
-  <li><a href="https://openbsd.org/faq/ports/differences.html#Introduction">Введение</a>
-  <li><a href="https://openbsd.org/faq/ports/differences.html#Advantages"  >Преимущества</a>
-  <li><a href="https://openbsd.org/faq/ports/differences.html#How"         >Как это сделать</a>
-  <li><a href="https://openbsd.org/faq/ports/differences.html#Pitfalls"    >Ловушки</a>
+  <li><a href="differences.html#Introduction">Введение</a>
+  <li><a href="differences.html#Advantages"  >Преимущества</a>
+  <li><a href="differences.html#How"         >Как это использовать</a>
+  <li><a href="differences.html#Pitfalls"    >Ловушки</a>
   </ul>
-  <li><a href="https://openbsd.org/faq/ports/differences.html#Tools"       >Packaging-инструментарий</a>
-  <li><a href="https://openbsd.org/faq/ports/differences.html#Flavors"     >Flavors</a>
+  <li><a href="differences.html#Tools"       >Packaging-инструментарий</a>
+  <li><a href="differences.html#Flavors"     >Flavors</a>
 </ul>
 
 <hr>
