[1.35] better wording - faq/ports/index.html

--- a/faq/ports/index.html
+++ b/faq/ports/index.html
@@ -75,9 +75,8 @@
   <li><a href="testing.html#More"        >И снова тестирование</a>
 </ul>
 
-<h3><a href="differences.html">Различия с другими BSD проектами</a></h3>
+<h3><a href="differences.html">Отличие от других BSD проектов</a></h3>
 <ul>
-  <li><a href="differences.html#Differences" >Важные различия с другими BSD проектами</a>
   <li><a href="differences.html#Extra"       >Дополнительная помощь</a>
   <li><a href="differences.html#Generic"     >Общие вопросы по поводу инфраструктуры</a>
   <li><a href="differences.html#Make"        >Правильное использование make</a>
@@ -101,17 +100,17 @@
 <a href="https://man.openbsd.org/ports">ports(7)</a>.
 
 <p>
-Базовая часть операционной системы OpenBSD довольно самодостаточна.
+Базовая часть операционной системы OpenBSD достаточно независима.
 Однако существует большое количество стороннего ПО, которое можно использовать
 в дополнение к базовой системе. Разработчики OpenBSD проделали большую работу,
 чтобы сделать многие тысячи сторонних программ доступными в виде
 <a href="../faq15.html">предварительно скомпилированных бинарных пакетов</a>.
 
 <p>
-Чтобы создать бинарный пакет, разработчики должны начнать работы над
-<code>Makefile</code>, который включает в себя список инструкций для распаковки,
-обновления, настройки и компиляции исходного кода. Коллекция всех этих вместе
-взятых <code>Makefile'ов</code> и есть система портов.
+Чтобы создать бинарный пакет, разработчики должны написать <code>Makefile</code>,
+который будет включать в себя список инструкций по поводу распаковки,
+обновления, настройки и компиляции исходного кода. Коллекцию всех этих вместе
+взятых <code>Makefile'ов</code> мы и называем системой портов.
 
 <p>
 В этой книге мы рассказываем как работает система портов и показываем как
@@ -129,4 +128,4 @@
 который проходит базовая часть самой OpenBSD.</b>
 Хотя мы стремимся поддерживать высокое качество коллекции пакетов, у нас просто
 не хватает людей и времени для обеспечения того же уровня надежности и
-безопасности, что и в базовой ОС.
+безопасности, что и в базовой части ОС.
