[1.89] update link to pf/nat.html - faq/index.html

--- a/faq/index.html
+++ b/faq/index.html
@@ -1,10 +1,6 @@
 <!doctype html>
 <html lang=ru id=faq>
 
-<!-- If you make edits to any FAQ documents, please start each sentence
-     on a new line, and try to keep the general formatting consistent
-     with the rest of the pages -->
-
 <title>OpenBSD: Часто задаваемые вопросы</title>
 <meta charset=utf-8>
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -202,44 +198,43 @@ OpenBSD, так и <a href="http://www.openbsd.org/cgi-bin/man.cgi">онлайн
 <ul>
 <li>Основная настройка
   <ul>
-  <li><a href="pf/config.html"                                >Начинаем работать с PF</a>
-  <li><a href="pf/macros.html"                                >Списки и Макросы</a>
-  <li><a href="pf/tables.html"                                >Таблицы</a>
-  <li><a href="https://www.openbsd.org/faq/pf/filter.html"    >Фильтрация пакетов</a>
-  <li><a href="https://www.openbsd.org/faq/pf/nat.html"       >Преобразование сетевых адресов</a>
-  <li><a href="https://www.openbsd.org/faq/pf/rdr.html"       >Перенаправление трафика (Port Forwarding)</a>
-  <li><a href="https://www.openbsd.org/faq/pf/shortcuts.html" >Сокращения для написания правил</a>
+  <li><a href="pf/config.html"                               >Начинаем работать с PF</a>
+  <li><a href="pf/macros.html"                               >Списки и Макросы</a>
+  <li><a href="pf/tables.html"                               >Таблицы</a>
+  <li><a href="https://www.openbsd.org/faq/pf/filter.html"   >Фильтрация пакетов</a>
+  <li><a href="pf/nat.html"                                  >Преобразование сетевых адресов (NAT)</a>
+  <li><a href="https://www.openbsd.org/faq/pf/rdr.html"      >Перенаправление трафика (Port Forwarding)</a>
+  <li><a href="https://www.openbsd.org/faq/pf/shortcuts.html">Сокращения для написания правил</a>
   </ul>
 <li>Детальная настройка
   <ul>
-  <li><a href="https://www.openbsd.org/faq/pf/options.html"   >Параметры работы фильтра</a>
-  <li><a href="https://www.openbsd.org/faq/pf/anchors.html"   >Якоря</a>
-  <li><a href="https://www.openbsd.org/faq/pf/pools.html"     >Пулы адресов и балансировка нагрузки</a>
-  <li><a href="https://www.openbsd.org/faq/pf/tagging.html"   >Маркировка пакетов (Политика фильтрации)</a>
+  <li><a href="https://www.openbsd.org/faq/pf/options.html"  >Параметры работы фильтра</a>
+  <li><a href="https://www.openbsd.org/faq/pf/anchors.html"  >Якоря</a>
+  <li><a href="https://www.openbsd.org/faq/pf/pools.html"    >Пулы адресов и балансировка нагрузки</a>
+  <li><a href="https://www.openbsd.org/faq/pf/tagging.html"  >Маркировка пакетов (Политика фильтрации)</a>
   </ul>
 <li>Дополнительные вопросы
   <ul>
-  <li><a href="https://www.openbsd.org/faq/pf/logging.html"   >Запись в журнал (logging)</a>
-  <li><a href="pf/perf.html"      >Производительность</a>
-  <li><a href="https://www.openbsd.org/faq/pf/ftp.html"       >Проблемы с FTP</a>
-  <li><a href="https://www.openbsd.org/faq/pf/authpf.html"    >Оболочка для аутентификации пользователей на шлюзах (authpf)</a>
-  <li><a href="https://www.openbsd.org/faq/pf/carp.html"      >Создание избыточности брэндмауэра (CARP и pfsync)</a>
+  <li><a href="https://www.openbsd.org/faq/pf/logging.html"  >Запись в журнал (logging)</a>
+  <li><a href="pf/perf.html"                                 >Производительность</a>
+  <li><a href="https://www.openbsd.org/faq/pf/ftp.html"      >Проблемы с FTP</a>
+  <li><a href="https://www.openbsd.org/faq/pf/authpf.html"   >Оболочка для аутентификации пользователей на шлюзах (authpf)</a>
+  <li><a href="https://www.openbsd.org/faq/pf/carp.html"     >Создание избыточности брэндмауэра (CARP и pfsync)</a>
   </ul>
 <li>Примеры правил
   <ul>
-  <li><a href="https://www.openbsd.org/faq/pf/example1.html"  >Настройка брандмауэра (building a router)</a>
+  <li><a href="https://www.openbsd.org/faq/pf/example1.html" >Настройка брандмауэра (building a router)</a>
   </ul>
 </ul>
 
 <hr>
 
 Список тех, кто работал над составлением этого FAQ:
-Nick Holland, Steven Mestdagh, Joel Knight,
-Eric Jackson, Wim Vandeputte и Chris Cappuccio.
+Nick Holland, Steven Mestdagh, Joel Knight, Eric Jackson, Wim Vandeputte и Chris Cappuccio.
 
 <p>
-Вопросы и комментарии, касательно оригинальной
-<a href="https://www.openbsd.org/faq/index.html">английской версии FAQ</a>,
+Вопросы и комментарии касательно оригинальной
+<a href="https://www.openbsd.org/faq/index.html">английской версии FAQ</a>
 отправляйте (на английском языке) на <a href="mailto:misc@openbsd.org">misc@openbsd.org</a>.
-Общие вопросы касательно самой OpenBSD отправляйте при помощи
-<a href="../mail.html">почтовых рассылок</a>.
+Общие вопросы касательно самой OpenBSD отправляйте в соответствующие
+<a href="../mail.html">почтовые рассылки</a>.
