[1.89] context translation - faq/ports/index.html

--- a/faq/ports/index.html
+++ b/faq/ports/index.html
@@ -41,8 +41,7 @@
   <ul>
     <li><a href="guide.html#Know"           >Будь знакомым с самой программой</a>
     <li><a href="guide.html#Figure"         >Определить важные параметры</a>
-    <li><a href="guide.html#Ideal"          >Идеальный случай: MULTI_PACKAGES
-                                             и PSEUDO_FLAVORS</a>
+    <li><a href="guide.html#Ideal"          >Идеальный случай: MULTI_PACKAGES и PSEUDO_FLAVORS</a>
     <li><a href="guide.html#Inter"          >Взаимозависимость между subpackages</a>
     <li><a href="guide.html#True"           >Взаимозависимость FLAVORS и PKGNAMES</a>
   </ul>
@@ -82,7 +81,7 @@
   <li><a href="differences.html#Make"        >Правильное использование make</a>
   <li><a href="differences.html#Fetch"       >Распаковка (извлечение исходников)</a>
   <li><a href="differences.html#wrkdir"      >Инфраструктура <code>WRKDIR</code></a>
-  <li><a href="differences.html#Fake"        >Fake Port Installation</a>
+  <li><a href="differences.html#Fake"        >Fake установка портов</a>
   <ul>
   <li><a href="differences.html#Introduction">Введение</a>
   <li><a href="differences.html#Advantages"  >Преимущества</a>
