[1.416] sync - openntpd/portable.html

--- a/openntpd/portable.html
+++ b/openntpd/portable.html
@@ -42,7 +42,7 @@
 </ul>
 
 <p>
-Чем больше таких интерфейсов изначально реализовано ОС, тем выше
+Чем больше таких интерфейсов изначально реализовано в ОС, тем выше
 вероятность, что портированная версия будет работать. Если ваша ОС
 не поддерживается, попросите вашего поставщика ОС поддерживать
 эти безопасные и простые API.
