[1.89] update link to 'options.html' - faq/pf/index.html

--- a/faq/pf/index.html
+++ b/faq/pf/index.html
@@ -30,7 +30,7 @@ PF: Пакетный фильтр OpenBSD
 	</ul>
 <li>Продвинутая настройка
 	<ul>
-	<li><a href="https://openbsd.org/faq/pf/options.html">Параметры работы фильтра</a>
+	<li><a href="options.html">Параметры работы фильтра</a>
 	<li><a href="https://openbsd.org/faq/pf/anchors.html">Якоря</a>
 	<li><a href="https://openbsd.org/faq/pf/queueing.html">Управление очередями пакетов и приоритезация</a>
 	<li><a href="https://openbsd.org/faq/pf/pools.html">Пулы адресов и балансировка нагрузки</a>
