--- a/faq/index.html
+++ b/faq/index.html
@@ -208,7 +208,7 @@ OpenBSD, так и <a href="http://www.openbsd.org/cgi-bin/man.cgi">онлайн
   </ul>
 <li>Детальная настройка
   <ul>
-  <li><a href="https://www.openbsd.org/faq/pf/options.html"  >Параметры работы фильтра</a>
+  <li><a href="pf/options.html"                              >Параметры работы фильтра</a>
   <li><a href="https://www.openbsd.org/faq/pf/anchors.html"  >Якоря</a>
   <li><a href="https://www.openbsd.org/faq/pf/pools.html"    >Пулы адресов и балансировка нагрузки</a>
   <li><a href="https://www.openbsd.org/faq/pf/tagging.html"  >Маркировка пакетов (Политика фильтрации)</a>
