[1.739] typo - index.html

--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
       на коде 4.4BSD, UNIX-подобная операционная система. Мы придаем большое внимание
       переносимости, следованию стандартам, точности, <a href="security.html">безопасности</a> и
       <a href="crypto.html">криптографии</a>. В качестве примера успеха проекта можно назвать
-      <a href="openssh/index.html">OpenSSH</a>, первоночально написанную для OpenBSD.
+      <a href="openssh/index.html">OpenSSH</a>, первоначально написанную для OpenBSD.
 
       <p>
-      Информацию по поводу загрузки OpenBSD можно найти на станице download.
+      Информацию по поводу того как скачать себе OpenBSD можно найти на станице download.
 
       <p>
       Последняя версия,
