[1.407] sync - openbgpd/ftp.html

--- a/openbgpd/ftp.html
+++ b/openbgpd/ftp.html
@@ -43,7 +43,7 @@
 OpenBGPD может работать и на других операционных системах, более новых или
 старых, но на вышеперечисленные системах OpenBGPD регулярно тестируется
 разработчиками. Отчеты (успех или нет) приветствуются.
-Вы можете сообщить нам об проблемах/ошибках/багах или отправить pull requests
+Вы можете сообщить нам о проблемах/ошибках/багах или отправить pull requests
 в <a href="https://github.com/openbgpd-portable">GitHub проект</a>.
 
 <h3>Цифровая подпись</h3>
