[1.89] better wording - faq/ports/guide.html

--- a/faq/ports/guide.html
+++ b/faq/ports/guide.html
@@ -64,8 +64,8 @@
 свои взгяды.
 
 <p>
-Общение и есть та самая разница, чем отличается удачный процесс портирования
-и поддержки порта, и тем портом, который в итоге будет забыт.
+Общение и есть та самая разница, между удачным процессом портирования
+и поддержкой порта, и тем портом, который в итоге будет забыт.
 
 <p>
 Во-первых, ознакомтесь с информацией на этой странице.
