[1.36] sync - faq/ports/index.html

--- a/faq/ports/index.html
+++ b/faq/ports/index.html
@@ -106,7 +106,7 @@
 <a href="../faq15.html">предварительно скомпилированных бинарных пакетов</a>.
 
 <p>
-Чтобы создать бинарный пакет, разработчики должны написать <code>Makefile</code>,
+Чтобы создать бинарный пакет, надо написать <code>Makefile</code>,
 который будет включать в себя список инструкций по поводу распаковки,
 обновления, настройки и компиляции исходного кода. Коллекцию всех этих вместе
 взятых <code>Makefile'ов</code> мы и называем системой портов.
