[1.45] sync - openssh/report.html

--- a/openssh/report.html
+++ b/openssh/report.html
@@ -28,16 +28,15 @@
 <li>Имеется ли более новая версия для <a href="openbsd.html">OpenBSD</a>
     или <a href="portable.html">портированная версия</a>, для вашей системы.
 <li>Список <a
-href="http://bugzilla.mindrot.org/buglist.cgi?product=Portable+OpenSSH&amp;bug_status=RESOLVED">
+href="https://bugzilla.mindrot.org/buglist.cgi?product=Portable+OpenSSH&amp;bug_status=RESOLVED">
 исправленных ошибок</a> и
-<a
-href="http://bugzilla.mindrot.org/showdependencytree.cgi?id=V_7_4">
+<a href="https://bugzilla.mindrot.org/showdependencytree.cgi?id=V_7_4">
 известных ошибок для прошлого релиза</a>.
 </ol>
 
 <p>
 Если вы так и не нашли ничего схожего с вашей проблемой, используйте
-<a href="http://bugzilla.mindrot.org">Bugzilla</a>
+<a href="https://bugzilla.mindrot.org">Bugzilla</a>
 для написания отчёта об ошибке (багрепорта). Обратите внимание, что
 проблемы в безопасности стоит скрыть от посторонних глаз, как об этом
 рассказывается ниже.
