[1.567] sync - openssh/portable.html

--- a/openssh/portable.html
+++ b/openssh/portable.html
@@ -46,7 +46,7 @@
 Портированная версия OpenSSH основанна на коде официальной версии, но их
 релизы не синхронизированы. Релизы портированной версии помечены суффиком "р"
 (например, 4.0p1). Официальная версия для OpenBSD никогда не использует суффикс
-"р", но вместо этого просто увеливается номер своей версии, когда она достигает
+"р", но вместо этого просто увеличивает номер своей версии, когда она достигает
 стабильного состояния.
 
 <p id="downloads">
