--- a/openbgpd/ftp.html
+++ b/openbgpd/ftp.html
@@ -22,10 +22,8 @@
 Это OpenBGPD версия/порт для других операционных систем. Он основан на коде
 портированных версий
 <a href="../openntpd/index.html">OpenNTPD</a>,
-<a href="../openssh/index.html">OpenSSH</a>
-и
-<a href="../libressl/index.html">LibreSSL</a>
-.
+<a href="../openssh/index.html">OpenSSH</a> и
+<a href="../libressl/index.html">LibreSSL</a>.
 
 <h3>Требования к платформе</h3>
 
