[1.417] sync - openntpd/portable.html

--- a/openntpd/portable.html
+++ b/openntpd/portable.html
@@ -16,8 +16,8 @@
 <hr>
 
 <p>
-Портированная версия OpenNTPD работает и на нескольких других UNIX,
-благодаря добавленной поддержке autotool и необходимого уровня
+Портированная версия OpenNTPD работает и на нескольких других UNIX
+системах, благодаря добавленной поддержке autotool и необходимого уровня
 совместимости. При этом был использован опыт, полученный при
 портировнии проектов <a href="../openssh/index.html">OpenSSH</a>
 и <a href="../libressl/index.html">LibreSSL</a>.
