--- a/libressl/index.html
+++ b/libressl/index.html
@@ -55,7 +55,8 @@
     ОС (Linux, FreeBSD, Windows, и.т.д.).
 
     <p>
-    Последнем стабильным релизом является версия 3.0.2.<br>
+    Последним stable релизом является 3.0.2.<br>
+    Последним development релизом является 3.1.0.<br>
     Больше информации можно найти на странице <a href="releases.html">доступных версий</a>.
 
     <p>
